--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 { 
 "singleQuote": true, 
 "trailingComma": "es5", 
-"endOfLine": "crlf", 
+"endOfLine": "auto", 
 "printWidth": 120, 
 "semi": false, 
 "bracketSpacing": true
